# async-users

./: .gitignore  LICENSE  README.md  docker-compose.yml  docker-compose.yml.save  init.sql  pyproject.toml  tmp.py
.github/workflows/: test-workflow.yml
src/: adapters.py  api.py  app.py  domain.py  services.py  settings.py
src/templates/: sign-in.html  sign-up.html
src/users/: adapters.py  aggregate.py  api.py  domain.py  exceptions.py  models.py  ports.py  repository.py  schemas.py  service.py  services.py  settings.py
src/users/adapters/: __init__.py  accounts.py  credentials.py  emails.py  phones.py
src/users/auth/: adapters.py  aggregate.py  endpoints.py  events.py  exceptions.py  handlers.py  models.py  repository.py  schemas.py  settings.py
src/users/auth/adapters/: accounts.py  credentials.py  emails.py  phones.py
src/users/auth/models/: accounts.py  credentials.py  events.py  security.py  tokens.py
src/users/auth/repository/: accounts.py  credentials.py
src/users/contacts/: models.py  repository.py
src/users/ports/: __init__.py  accounts.py  credentials.py  emails.py  phones.py
tests/: conftest.py
tests/integration/: conftest.py  test_accounts.py  test_adapters.py  test_auth_adapters.py  test_auth_repository.py  test_connection.py  test_users_adapters.py  test_users_repository.py  test_users_service.py
