[tool.poetry]
name = "async-users"
version = "0.1.0"
description = "asynchronous user managment"
authors = ["gnu-fox <eric.m.cardozo@mi.unc.edu.ar>"]
license = "MIT LICENCE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.tests.dependencies]
pytest = {extras = ["asyncio"], version = "^8.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"