[tool.poetry]
name = "users"
version = "0.1.0"
description = "asynchronous user managment"
authors = ["gnu-fox <eric.m.cardozo@mi.unc.edu.ar>"]
license = "MIT LICENCE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncpg = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
fastapi = "^0.110.1"
jinja2 = "^3.1.3"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.2.1"
python-ulid = {extras = ["pydantic"], version = "^2.4.0.post0"}
python-multipart = "^0.0.9"
websockets = "^12.0"
aioredis = "^2.0.1"


[tool.poetry.group.tests.dependencies]
pytest = {extras = ["asyncio"], version = "^8.1.1"}
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"